modules/security_group/main.tf
resource "aws_security_group" "public_sg" {
  name        = "${var.name_prefix}-public-sg"
  description = "SG para EC2 publica"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.my_ip_cidr]  # Ip publica propia
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.name_prefix}-public-sg"
  }
}

resource "aws_security_group" "private_sg" {
  name        = "${var.name_prefix}-private-sg"
  description = "SG para EC2 privada (solo SSH desde bastion)"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.public_sg.id]  # permite acceso desde la EC2 pública
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.name_prefix}-private-sg"
  }
}
